tests/data/string/indexof/negative/String Int32 Int32 StringComparison.fs
open System
"foo".IndexOf("f",0,1,StringComparison.InvariantCulture)
